docs: improve schedule

--- a/docs/src/content/docs/docs/cronograma.mdx
+++ b/docs/src/content/docs/docs/cronograma.mdx
@@ -115,11 +115,11 @@ Project starts 2025-02-07
 [Clientes] starts at [T&C BE]'s end
 [Clientes] is colored in lightgreen
 
-[Clientes FE] on {Victor} starts on 2025-02-25 and requires 2 days
+[Clientes FE] on {Victor} starts on 2025-02-25 and requires 3 days
 [Clientes FE] is colored in lightskyblue
 
-[Cotizacion] on {Fernando} starts at [Clientes]'s end and requires 2 days
-[Cotizacion] is colored in lightgreen
+[Cotizacion BE] on {Fernando} starts at [Clientes]'s end and requires 3 days
+[Cotizacion BE] is colored in lightgreen
 
 [T&C FE] on {Fernando} starts at [Clientes]'s end and requires 1 days
 [T&C FE] is colored in lightgreen
