docs: update schedule

--- a/docs/src/content/docs/docs/cronograma.mdx
+++ b/docs/src/content/docs/docs/cronograma.mdx
@@ -67,6 +67,9 @@ Project starts 2025-02-07
 [Roedores] starts at [Plagas]'s end
 [Roedores] is colored in lightgreen
 
+[Revisión 1] happens 2025-03-14
+
+
 [Dashboard] requires 1 week
 [Dashboard] starts at [Roedores]'s end
 
@@ -111,11 +114,12 @@ Project starts 2025-02-07
 [T&C BE] starts at [Login]'s end
 [T&C BE] is colored in lightgreen
 
+
 [Clientes] on {Fernando} requires 3 days
 [Clientes] starts at [T&C BE]'s end
 [Clientes] is colored in lightgreen
 
-[Clientes FE] on {Victor} starts on 2025-02-25 and requires 3 days
+[Clientes FE] on {Victor} starts on 2025-02-25 and requires 4 days
 [Clientes FE] is colored in lightskyblue
 
 [Cotizacion BE] on {Fernando} starts at [Clientes]'s end and requires 3 days
@@ -124,6 +128,23 @@ Project starts 2025-02-07
 [T&C FE] on {Fernando} starts at [Clientes]'s end and requires 1 days
 [T&C FE] is colored in lightgreen
 
+[Servicios] on {Fernando} starts at [Clientes]'s end and requires 1 days
+[Servicios] is colored in lightgreen
+
+[Cotizacion FE] on {Victor} starts at [Cotizacion BE]'s end and requires 2 days
+[Cotizacion FE] is colored in lightskyblue
+
+[Proyectos BE] on {Fernando} starts at [Cotizacion BE]'s end and requires 3 days
+[Proyectos BE] is colored in lightgreen
+
+[Proyectos FE] on {Victor} starts at [Cotizacion FE]'s end and requires 3 days
+[Proyectos FE] is colored in lightskyblue
+
+[Gen docx] on {Fernando} starts at [Proyectos BE]'s end and requires 4 days
+[Gen docx] is colored in lightgreen
+
+
+[Revisión 1] happens 2025-03-14
 
 legend
 Leyenda:
