--- a/docs/src/content/docs/docs/vista-general.mdx
+++ b/docs/src/content/docs/docs/vista-general.mdx
@@ -9,11 +9,11 @@ import Uml from "@/components/uml.astro"
 :Usuario: --> (Login)
 (Login) --> (Dashboard)
 (Dashboard) -r-> (Gestion de clientes)
-(Dashboard) -r-> (Gestion de insumos)
 (Dashboard) --> (Gestion de cotizaciones)
 (Dashboard) --> (Gestion de proyectos)
 
 (Gestion de cotizaciones) ---> (Gestion de T&C)
+(Gestion de proyectos) -l-> (Ficha de Operaciones)
 (Gestion de proyectos) ---> (Registro de roedores)
 (Gestion de proyectos) ---> (Cronograma anual)
 (Gestion de proyectos) ---> (Certificados)
