feat: update docs on quotation generation

--- a/docs/src/content/docs/docs/cotizacion.mdx
+++ b/docs/src/content/docs/docs/cotizacion.mdx
@@ -105,6 +105,46 @@ endif
 `} />
 
 
+## Generar cotizacion
+
+- Generado en formato excel, usando plantilla provista
+- La plantilla de excel tiene placeholders como `{{nombre_cliente}}`
+  que se reemplazan en el backend
+
+Campos a reemplazar:
+
+- Digesa, constancia de habilitacion
+- Fecha de la cotizacion
+  - ? fecha en la que se crea la cotizacion?
+- Nro de presupuesto
+  - ? el numero es seriado?
+- Id. del cliente
+  - ? el nro de cliente es seriado?
+- Presupuesto valido hasta
+
+- ? Nombre de la empresa
+- ? Direccion de la empresa
+- ??
+
+- ? garantia?
+
+- Servicios
+  - Cantidad
+  - Nombre del servicio
+  - Costo por servicio ?
+  - Impuestos
+  - Importe total
+- Subtotal
+- IGV
+- Impuesto a las ventas
+- Otros
+- Total
+
+- Terminos y condiciones
+  - Incluye igv: si/no
+  - Validez de la propuesta: xx dias
+  - 7. custom
+  - Al finalizar los trabajos se entrega: ____
 
 
 
